--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.44.0",
     "react-native-carousel": "^0.10.0",
     "react-native-datepicker": "^1.6.0",
+    "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.15.3",
     "react-native-markdown": "^0.1.1",
     "react-native-markdown-view": "^1.0.0",
@@ -20,7 +21,7 @@
     "react-native-swipeout": "^2.3.3",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-textinput-effects": "^0.3.1",
-    "react-native-vector-icons": "^4.5.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
