--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-carousel": "^0.10.0",
+    "react-native-check-box": "^2.1.0",
+    "react-native-checkbox": "^2.0.0",
     "react-native-datepicker": "^1.6.0",
+    "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.15.3",
     "react-native-markdown": "^0.1.1",
     "react-native-markdown-view": "^1.0.0",
